--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -38,7 +38,7 @@ If, as the social anthropologist Jack Goody argues, lists are historically prima
 
 Finally, and more formally, we might also consider some of the formal properties of lists as orderings. All lists imply order, but what kind of order? Mathematicians distinguish lists from sets on the basis of a distinction focused on order. Formally, both lists and sets are collections, but a list also contains a mapping of its elements to an ordering, usually the natural or counting numbers. Sometimes this order is explicit. Numbers are written down one side of the list. Often the order is implicit to the spatial arrangement of the list. This formal idea of the list as a mapping is helpful since it suggests relational possibilities. Mappings occasion relations between sets, collections, group or multiplicities.  Mappings between list order and social order are manifestly highly contingent. A flight checklist differs greatly from a personal to-do list, even if they share many formal properties.  Listing practices in a given social setting, therefore, always index an engagement between the formal properties of the list and the necessarily more fluid dynamics of social order. From the perspective of social order, shopping lists, as they are co-constructed by a supermarket chain's recommender system, might be important intersectional zones for the conversion of average everydayness through data-analytic propensities. 
 
-TBA - short paragraph summarising the social theory of list ordering
+TBA - short paragraph summarising the social theory of list ordering; make sure to add stuff on the ordering-remapping of order in the list; 
 
 # D. Archaeology of recommendations  from 1984  to 2007
 
@@ -56,32 +56,21 @@ This is not a drastic or abrupt event. Academic researchers first began writing 
 
 > In everyday life, we rely on recommendations from other people. ... Recommender systems augment this natural social process. In a typical recommender  system, people provide recommendations as inputs, which the system then aggregates and directs to appropriate recipients. In some cases the primary transformation is in the aggregation; in others the system’s value lies in its ability to make good matches between the recommenders and those seeking recommendations.[@Resnick_1997,56] 
 
-Writing just after the advent of web-based e-Commerce, Resnick and Varian  imagined recommender systems augmenting the 'collaborative filtering' that people do when they write and read reviews of products and services (for instance, on the travel website, TripAdvisor; [@Scott_2012]). In 1997,  Resnick and Varian thought that 'people provide recommendations' and recommender systems would aggregate and rank for recipients. A slightly later review, [@Schafer_2001], diagrams an augmented 'natural social process' with a range of elements, technologies, inputs and outputs, with varying degrees of personalization. 
-
-
-[BREAK HERE] 
+Writing just after the advent of web-based e-Commerce, Resnick and Varian  imagined recommender systems augmenting the 'collaborative filtering' that people do when they write and read reviews of products and services (for instance, on the travel website, TripAdvisor; [@Scott_2012]). In 1997,  Resnick and Varian expected that 'people [would] provide recommendations' and recommender systems would aggregate and rank recommendations for recipients. A slightly later review, [@Schafer_2001], diagrams an augmented 'natural social process' with a range of elements, technologies, inputs and outputs, with varying degrees of personalization. 
 
 # E. Experimenting with probabilistic conversions
 
-## The realization of propensities
+This section of the paper returns directly to Patel's presentation, and the character of the newly implemented  recommender system.  In the discussion that follows, the description of components of the new recommender system -- predictive models and their parameters, infrastructural provisioning, product similarity matrices --  and the problems of  recommendation -- too many products, changes over time, unstable propensities of things in their associations with people -- together suggest that personalization, and the 'personal relevance model' have a troubled relation to social order. I develop an analysis centred on probabilities and processes of probabilisation -- rendering situations calculable as probabilities -- in exploring Patel's account of the recommender system. The motivation to focus on probabilities and probabilisation is explicitly philosophically reconstructive. It represents an attempt to reframe the operation of the recommender system in a way freed from lingering incompatibilities between calculation and social life [@Dewey_1957, 26] .           
 
->the introduction of propensities amounts to generalizing and extending the idea of forces again  14
+In order to do this, we need a working notion of probability. I draw directly on the work of Karl Popper for this. In an essay written towards the end of his career, Popper presents an alternative account of probabilities as real processes, in the same way that contemporary sciences might see forces as real [@Popper_1990]. Somewhat counter-intuitively, Popper does not identify probability with either degree of belief (likelihood) or frequency of events. Instead he suggests 'they should be regarded as _inherent in a situation_ ' [@Popper_1990, 14].  On this account, probabilities are tendencies towards realization inherent in a situation. Probabilities have or indeed are _propensities_, tendencies to realize the event (11). While this somewhat abstract philosophical account of probability as propensity might seem to be anchored far away from the concerns of online grocery shopping, Patel's presentation of the personal relevance model and the ways in which it seeks to calculate probabilities of purchase. The series of prototyping reconstructions I am about to discuss will explore the tenability of this rather radical alternative to regular narratives of personalization.[^65.1]
 
->they should be regarded as _inherent in a situation_ 14
-
-The conversion of  collaborative filtering into predictive personalisation appeared throughout  Patel's presentations. Patel described a move or 'conversion'  from 'a rules-based system'  to  a 'personal relevance model' as the basis of the recommender system. Each term in that phrase -- personal, relevance and model -- has some weight in the conversion event. Again, dealing with the sometimes telegraphic style of machine learning presentations means making some assumptions. It is reasonable to assume that what Patel describes as  the 'rule-based system' refers  to the extremely well-known `apriori` algorithm, developed  by computer scientists Rakesh Agrawal and Ramakrishnan Srikanti working at IBM Research Alameda in the early 1990s [@Agrawal_1994]. A now-classic approach to 'market basket analysis,' it was listed as one of the top ten data mining algorithms in a survey conducted amongst data miners [@Wu_2008] and usually attracts a chapter in data-mining and machine learning textbooks (e.g. [@Hastie_2009]). The interest of `apriori` for our purposes is that it relies on massive datasets, but does not personalize its recommendations.
-
-The media theorist Mark Hansen has recently suggested that 'predictive analytics are discoveries of micrological propensities that are not directly correlated with human understanding and affectivity and that do not by themselves cohere into clearly identifiable events' [@Hansen_2015a, 111-112]. Hansen's account differs from many widely shared views of big data. In the face of the so much personalization (and Patel's presentation exemplifies this), Hansen suggests a somewhat processes of impersonalization.  If  much predictive practice attempts to elicit 'micrological propensities' from data,   Hansen, drawing on the work of the philosopher of science Karl Popper,  links data to things via probabilities:
-
->Whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things [@Hansen_2015a, 120] 
-
-Hansen theorises big data or predictive analytics as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of animated, eventful, propensities of things. Predictive analytics links probabilities as calculations to propensities or the mutable associative agencies of things. The practical and indeed empirical  question is whether such transformations or 'conversion' in relations between probabilities and 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems.[^20.1] The series of prototyping reconstructions I am about to discuss will explore the tenability of this rather radical alternative to regular narratives of personalization.
-
-[^20.1]: I will argue that 'conversion' is a preferable term for these changes.  It highlights  re-orientations in subjects, experience, things, numbers and structures that ranges more widely than Hansen's 'ontological transformation' formulation. Not much hinges on the choice of terms, but 'conversion' happens to be the term used by Patel. 
+[^65.1]: The media theorist Mark Hansen has recently applied Popper's account to argue  that 'predictive analytics are discoveries of micrological propensities that are not directly correlated with human understanding and affectivity and that do not by themselves cohere into clearly identifiable events' [@Hansen_2015a, 111-112]. Hansen's account differs from many widely shared views of big data. In the face of the so much personalization (and Patel's presentation exemplifies this), Hansen attributes a somewhat impersonalizing force to big data.  If  much predictive practice attempts to elicit 'micrological propensities' from data, Hansen links data to things via probabilities: 'whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things' [@Hansen_2015a, 120]. Hansen theorises big data or predictive analytics as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of animated, eventful, propensities of things. Predictive analytics links probabilities as calculations to propensities or the mutable associative agencies of things. The practical and indeed empirical  question is whether such transformations or 'conversion' in relations between probabilities and 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems. 'Conversion' is a preferable term for these changes. Not much hinges on the choice of terms, but 'conversion' happens to be the term used by Patel.  It highlights  re-orientations in subjects, experience, things, numbers and infrastructures that ranges more widely and are more grounded than Hansen's 'ontological transformation' formulation. 
 
 ## Apriori as conditional probabilities
 
-> we need _a calculus of relative or conditional probabilities_ as opposed _a calculus of absolute probabilities_ 16
+Popper suggests that one of the reasons probability has been difficult to work with philosophically, even as it pervades scientific thought, is that a certain limited domain of probability practice focused on dice rolls, coin tosses, urns with balls and other seemingly random events has occupied centre stage in concepts of probability. Even if it has been enormously productive and transformative, it is insufficient because it privileges _absolute_ probability at the expense of _conditional_ probabilities. 'We need,' Popper urges, '_a calculus of relative or conditional probabilities_ as opposed _a calculus of absolute probabilities_' [@Popper_1990, 16]. Relative or conditional probabilities are propensities that depend on other events for their own realization. All events require other events, so all probabilities are conditional, even if probability calculations have typically preferred to determine  the weight of possibilities devoid of the inevitable physical conditioning of their realization.
+
+Viewed from the standpoint of probabilities, many predictive systems are highly crafted arrangements for the calculation of conditional probabilities. For instance, the first element of the new recommender system consisted in a change of the underpinning algorithms and model. Patel described a move from 'a rules-based system'  to  a 'personal relevance model' as the basis of the new recommender system. It is likely that what Patel describes as  the 'rules-based system' refers  to the extremely well-known `apriori` algorithm or association rules learning technique, developed  by computer scientists Rakesh Agrawal and Ramakrishnan Srikanti working at IBM Research Alameda in the early 1990s [@Agrawal_1994]. A now-classic approach to 'market basket analysis,' it was listed as one of the top ten data mining algorithms in a survey conducted amongst data miners [@Wu_2008] and usually attracts a chapter in data-mining and machine learning textbooks (e.g. [@Hastie_2009]). The interest of `apriori` for our purposes is that it begins to address the problem of understanding large numbers of shopping transactions as a matter of conditional probability. 
 
 ```{r arules-ex, cache=TRUE, fig.cap='Frequency of association betwene items in the `Grocery` dataset', message=FALSE, echo=FALSE, fig.margin=TRUE}
 library(knitr)
@@ -92,6 +81,8 @@ data(Groceries)
 itemFrequencyPlot(Groceries,topN=10,col=rainbow(10), ntype="absolute",  cex.axis = 0.55)
 ```
 
+The notion of conditional probability at work in `aprior` is relatively simple, and assumes that the frequency of transactions provides the best guide to what shoppers are likely to do. The `apriori` algorithm finds sets of items that commonly occur together in transactions. In this sense, is still oriented by a notion of absolute probability, inflected by some elements of conditional probability.   Commonly occurring sets are expressed as 'association rules.' For instance, using the `Groceries` dataset in the `R` package `arules,`  the `apriori` algorithm counts frequencies of purchase in the overall set of all items purchased in a supermarket (the `Groceries` dataset  was acquired from a 'local German supermarket' [@Hahsler_2006a]). Figure \@ref(fig:arules-ex) shows how often the most common items appear. `Whole milk` appears most frequently.
+
 ```{r arules-ex2}
 options(digits=2)
 rules<- apriori(data=Groceries, parameter=list(supp=0.001,conf = 0.15,minlen=2), appearance = list(default="rhs",lhs="whole milk"), control = list(verbose=FALSE))
@@ -99,16 +90,12 @@ rules_sorted <- sort(rules, decreasing=TRUE,by="confidence")
 kable(inspect(rules_sorted[1:5]), caption='The first five association rules for the `Groceries` dataset')
 ```
 
+The association rule-based model for the `Groceries` dataset illustrates some characteristic ordering practices of 1990s-style data-mining approaches to lists. The association between items is expressed in the form of _rules_ whose importance is can be ranked by how frequently items are found in the same purchase. Although the `apriori` model does not use the language of probability calculus, the 'rules,' a term derived from older decision support literature, rank associations between items. When we run the `apriori` algorithm on the `Groceries` dataset, the resulting set of rules (shown in Table \@ref(tab:arules-ex2)) indicates that milk and vegetables has a stronger association than milk and buns.  The calculations of `support` (how frequently the association appears in the dataset), `confidence` (how often the rule applies in the dataset)  and   `lift` (a ratio between the `support` and the independent frequencies of the items) in the table attempt to measure the strength of these associations in different ways. 
 
-The `apriori` algorithm finds sets of items that commonly occur together in transactions.  These commonly occurring sets are expressed as 'association rules.' For instance, using the `Groceries` dataset in the `R` package `arules,` we can readily see how Walmart *might* have discovered   the fabled association between diapers and beer.[^149.1] Figure \@ref(fig:arules-ex) shows how often common items appear. `Whole milk` appears most frequently.  The association rule-based model for the `Groceries` dataset illustrates some characteristic ordering practices of 1990s-style data-mining approaches to lists (the `Groceries` dataset  was acquired from a 'local German supermarket' [@Hahsler_2006a]). The association between items is expressed in the form of _rules_ not a model. These rules, a term derived from older decision support literature, define sets of associations between items. Table \@ref(tab:arules-ex2) shows that the first rule has a stronger association than the second. Milk and vegetables is more likely an association than milk and buns.  A rules-based recommender system should, therefore, might put them in that order in the 'Have You Forgotten' list. 
 
-[^149.1]: One of the founding narratives of big data customer analytics, the beer-diaper association was not, according to [@Power_2002] found through data mining at all.
+## 2500 sauces: `Apriori` meets the API 
 
-Although association rules and the `apriori` algorithm present social order in terms of sets of frequency-weighted associations, an `apriori`-based recommender system contains no statistical model. It also no grasp on personal relevance since the associations it defines are only between things. Put in terms of the big data conversion, the rules-based system is not predictive, or personal. The `apriori` algorithm might be seen as an attempt to grasp the excess of things in a Tesco supermarket by identifying subsets whose closure derives from the associations between things that people construct (through buying habits, by virtue of a shopping list, etc.). In association rules, personhood or experience is irrelevant. The openness of these rules -- the `apriori` algorithm can product any number of rules of diminishing strength -- points towards the propensity of things to find themselves together in shopping baskets, but cannot cannot individuate that propensity beyond demographic quantiles and categories. 
-
-## `Apriori` meets the API 
-
-Even if `apriori`  elicits associations between things, it struggles with the propensity of commodities to multiply. A simple illustration of the combinatorial problem faced by recommender system can be developed using the `Grocery` dataset.  If we take all the items in the `Grocery` dataset and paste them into the 'shopping list' box on the Tesco grocery website (or as I side, run them as searches on the TescoLab Product API), each of the 169 items in the dataset yields dozens and sometimes thousands of products from Tesco online.
+Even as `apriori`  elicits associations between things, it struggles with the propensity of commodities to multiply. A simple illustration of the combinatorial problem faced by recommender system can be developed by bringing the `Grocery` dataset together with the actual list of items that sells in its online grocery shopping site.  If we take all the items in the `Grocery` dataset and paste them into the 'shopping list' box on the Tesco grocery website (or as I did, run them as searches on the TescoLab Product API [@Tesco_2016]), each of the 169 items in the `Grocery` dataset yields dozens and sometimes thousands of products from Tesco online.
 
 ```{r tesco-ex, echo=FALSE, cache=TRUE, fig.cap ='Tesco surplus',  fig.margin=TRUE}
     library(ggplot2)
@@ -116,22 +103,37 @@ Even if `apriori`  elicits associations between things, it struggles with the pr
     total = sum(tesco$actual, na.rm=TRUE) 
     tesco = na.omit(tesco)
     tesco$actual = as.integer(tesco$actual)
-    ggplot(tesco[tesco$actual>50,], aes(x=labels, y=actual, fill=labels)) +geom_bar(stat='identity') + coord_flip() + ggtitle('Tesco grocery items with more than 50 products') + theme(legend.position="none", axis.text=element_text(size=7))
+    ggplot(tesco[tesco$actual>50,],
+        aes(x=labels, y=actual, fill=labels)) +
+        geom_bar(stat='identity') + coord_flip() +
+        ggtitle('Tesco grocery items with more than 50 products') +
+        theme(legend.position="none", axis.text=element_text(size=7))
+
 ```
 
-Items in the `Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure \@ref(fig:tesco-ex)).  There is, I would suggest, a logistic propensity in things that recommender systems encounter in the ways of global supply chains. The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The proliferation of things on the shelves of supermarket or grocery warehouse confronts produces a combinatorial problem for data miners. `r total` products (actually Patel mentioned 200,000 products) can be combined in a vast number of ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially valuable as recommendations. 
+Items in the `Groceries` dataset proliferate into a Tesco's list of branded products. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure \@ref(fig:tesco-ex)).  There is, I would suggest, a logistic proliferation that recommender systems encounter. The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that could find themselves in associations of various strengths.  If we think just of the almost 2500 sauces or 1200 `rice` products supplied by the Tesco API,  then a tremendous number of associations between sauce and rice are possible. The propensities of actual sauce and rice products to find themselves together in an individual purchase vary greatly. The proliferation of things on the shelves of supermarket or grocery warehouse confronts produces a combinatorial problem for data-mining machine learning approaches such as association rules. `r total` products (actually Patel mentioned 200,000 products) can be combined in a vast number of ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists have propensities or tendencies to realization that are close to zero. But others with somewhat higher propensities might furnish the basis of interesting recommendations. 
 
-##  The list in its mapping to probabilities
+More importantly, the limited conditioning of probability of the association rules approach suggests a compelling reason for personalization.  Even if the association rules and the `apriori` algorithm   generate recommendable sets of frequency-weighted associations, an `apriori`-based recommender system contains no statistical model. Its probabilisation of shopping is incomplete since it only works on associations between things. The tendency of some milk to find itself in a shopping basket alongside bread attests to an important commonality of practice in certain parts of the world. But the conditional probabilities implicit in the model do not bring in much of the world and its teeming sieve of propensities moving towards realization.  These associations are not trivial, but they are very open-ended. Put in terms of the big data conversion, the rules-based system lacks, in principle, a means of crystallizing a limited or enclosed set of possibilities. 
 
-Conditional probability; the models
-[TBA - section on the role of probability; and logr] 
+## The list in its mapping to probabilities
+
+Predictive models are central technical elements in many big data arrangements because they provide a way of constructing conditional probabilities that incorporate more of the situation in which any propensity -- to purchase a bottle of Vueve Cliquot champagne for instance -- is inherent. In the new recommender system described by Patel, the business goal is to extend the list of the items customers have selected for purchase with  a few well-chosen items. In order to do this, the list of items selected for purchase will be extended by recommendations that have, according to a predictive model, the most chance of 'conversion'; that is, actual purchase. The predictive model carries the burden of calculating the conditional probability of purchase given everything known about the situation at this moment in time.  
+
+Patel introduced the new 'personal relevance model' with a data graphic familiar to machine learners and statistical modellers. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different statistical models.  The graph indexes the 'causal efficacy' of the recommender system, its capacity to include and transform propensities or 'real potentialities' into operational events or purchases.  The graph compares the previous rule-based recommender systems with some of the relevancy-model alternatives -- logistic regression, random forests, gradient boosting and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did as well or slight other than other alternatives. 
+
+
+The models Patel so briefly mentioned are all 'classifiers,' predictive models that 'classify' particular outcomes by calculating their probability.  Much of the core architecture of the machine learning classifier models received scant reference in Patel's presentation. It is most likely that in DunnHumby's work, the classifying model at the heart of the recommender system constructs a decision boundary in vector space between points that belong to different classes of things [@Mackenzie_2015e]. The classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a thing such as grocery to the binary classes are expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. The crucial point here is that the shopping list written by the customer is extended, quasi-invisibly, in the recommender system to potentially any of the 250,000 items in the Tesco inventory.
+
+[HERE] 
+
+Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned.
 
 ## Repeating sufficiently often to measure
 
 52 weeks of data
 > in many kinds of events this is not the case, and the propensities cannot be measured because the relevant situation changes and cannot be repeated 17
 
-##  Platform Experiments that reduce interfering propensities
+## Platform Experiments that reduce interfering propensities
 
 > experiments. ... by creating, at will, artificial conditions that either exclude, or reduce to zero, all the interfering and disturbing propensities 23
 
@@ -153,18 +155,4 @@ The fact that probabilisation largely takes the form of personalization tends to
 
 Reconstructions of specific conversion events associated with big data can work in different ways. The combination of social theory, archaeology, philosophy and model/data prototypes used in this paper sketches one possible way of addressing the trouble, the disturbance or instability that seems to affect many discussions of big data. 
 
-------------
-
-In their mundane intersectional practices of ordering, recommender systems show how  predictive practices affect existing forms of social order in the world. Rather than directly positing an ontological transformation (as Hansen does), or pointing to the erosion of social order (as Turow does), I have explored some of the conversion events associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. Rather than discontinuous changes, the conversion of the recommender system via a relevance model suggests an ongoing problematization of propensities. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of propensities and conditionalities, warping over time. The predictive assemblages connect logistical ensembles to the negotiation, compromises, rituals and local orderings of everyday life.
-
-I have been suggesting that predictive listing in the form of open-ended recommendation changes social order. It establishes a common coding between machinic and ritual repetition (as exemplified in the shopping list).  It also suggests some ways in which repetition or reiteration  can also participate in changing and emergent order. By understanding the world in terms of propensities, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
-
-Rather than understanding prediction as the closed form of an ontologically open world ('the propensities of things'), the DunnHumby relevance model, in all its statistical, infrastructural, organisational and banal complexity, suggests that the predictive conversion remains constitutively incomplete. Shopping lists in all their banal yet primary orderings are fertile terrain for prediction because they are incomplete, somewhat open and mutable forms.  The constitutive incompleteness and openness of lists are very closely entangled with ongoing processes of ordering and othering, and at the same time, can accommodate predictive operations.   Lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. The problem of 'constructing good features,' a problem that any predictive model must address, persists as the site of experiments in partly open structures.
-
-A constitutive openness to new associations, new combinations, new groupings or actors is integral to the conversion events associated with contemporary data practice. In their account of the Netflix recommender system, Ted Hallinan and Peter Striphas make the following argument:
-
-> These systems, and more importantly their algorithms, play a critical role in deciding which articles (or parts thereof) gain admission to the cultural realm, and in what form. Their doing so thus points in the direction of another universe of reference—a court of algorithmic appeal in which objects, ideas, and practices are heard, cross-examined, and judged independently, in part, of human beings [@Hallinan_2014, 13]
-
-Despite the somewhat troubling reference to 'another universe,' as if Netflix or DunnHumby's recommender systems occupy a different reality, Hallinan and Striphas usefully and aptly highlight how such systems  mingle  objects, ideas and practices.
-
-Something similar happens to shopping in the Dunnhumby relevance model. In the customer-product association matrix, in the product-product similarity matrix, in the 14,000 variables included in the logistic regression model, a 'universe of reference' takes shape. The shopping list, the commonplace inscription of normative and actual social order, takes on a complex temporal-material structure that mixes prediction, infrastructural constraints, the individual characteristics of list-makers, statistical validations, database architectures and above all the surplus sensibility associated with  circulation and consumption of commodities. Shopping lists undergoing a conversion experience as they become more probabilistic, but the idea that probabilities are the closed form of propensities does not account for the distribution of probabilities in relations between things, between people, between people and things, and between things and people.
+# References
